# intent-recogniser

./: CMakeLists.txt  readme.txt
app/: Main.cpp
inc/: DiscoverIntention.h
interface/: IDiscoverIntention.h
src/: DiscoverIntention.cpp
tests/: CMakeLists.txt  Main.cpp  Unittests.cpp
